# LearnOGL

./: .gitignore  CMakeLists.txt
lib/: libGL.so.1
sources/: main.cpp
